--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
-/* src/App.css */
+
 .popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(0, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .popup-content {
-  background: white;
+  background: rgba(198, 191, 191, 0.381);
   padding: 20px;
+  border:solid 1px rgb(71, 57, 57);
   border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 400px;
   position: relative;
 }
@@ -27,11 +29,45 @@
   background: transparent;
   font-size: 18px;
 }
+.dropdown{
+  width: 80%;
+  border-radius: 8px;
+  border: none;
+  height: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+.segmentname{
+  width: 80%;
+  border-radius: 8px;
+  border: none;
+  height: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 10px;
+}
 
 .schemas-list {
   margin-top: 20px;
+  padding: 5px;
+  border: solid 2px blue;
 }
 
 .schema {
   margin-bottom: 10px;
+}
+.startbutton{
+  justify-content: center;
+  margin-left: 40%;
+  margin-top: 20%;
+}
+button{
+  margin: 8px;
+    justify-content: center;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #ff8001;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
 }
